plugins {
    id 'com.gradleup.shadow' version '8.3.8'
}

defaultTasks 'build'

subprojects {
    apply plugin: 'java'
    apply plugin: 'com.gradleup.shadow'

    group = 'me.lucko.luckperms.placeholders'
    version = '5.4-SNAPSHOT'

    tasks.withType(JavaCompile).configureEach {
        options.release = 11
    }

    repositories {
        mavenLocal()
        mavenCentral()
        maven { url('https://repo.maven.apache.org/maven2/') }
        maven { url('https://repo.lucko.me/') }
    }

    dependencies {
        compileOnly 'net.luckperms:api:5.4'
    }

    artifacts {
        archives shadowJar
    }

    tasks.withType(JavaCompile).configureEach  {
        options.encoding = 'UTF-8'
    }
}
